Updating URL for api call

--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col s1 m1 links">
-      <a href="faq.html">Faq</a>
+      <a ui-sref="footerpages.faq">Faq</a>
     </div>
   </div>
   
