--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 	<div id="modal1" class="modal userprofileModal" >
         <div class="modal-content center">
           <div class="col s12 m8">
-            <h5><span style="color:#c62828">Please Enter Details to access "User Profile"</span></h5>
+            <h5><span style="color:#c62828">Please Enter Details to access "History"</span></h5>
            
           </div>
 
