--- a/sign_up.html
+++ b/sign_up.html
@@ -1,9 +1,9 @@
  <link rel="stylesheet" type="text/css" href="css/sign_up.css">
    <div id="modal1" class="modal">
           <div class="modal-content">
-          <div class="col s12">
-            <h4>Verify OTP</h4>
-            <p>Enter verfy and then press "Verify"</p>
+          <div class="col s12 center">
+            <h4 style="color:#c62828">Verify OTP</h4>
+            <p>Enter OTP, sent to your phone and then press "Verify"</p>
           </div>
             <div class="input-field col s6">
               <input id="otp" type="text" ng-model="user_OTP">
