--- a/beDonor.html
+++ b/beDonor.html
@@ -20,7 +20,7 @@
 								<div ng-show="click==1"></div>
 						    	<div class="input-field inline" ng-show="click==2">
 
-						    		<select ng-model="camplocation">
+						    		<select class="browser-default" ng-model="camplocation">
 									      <option value="" disabled selected>Select Location</option>
 									      <option value="DELHI">DELHI</option>
 									      <option value="GURUGRAM">GURUGRAM</option>
@@ -37,7 +37,7 @@
 
 						        <div class="input-field inline" ng-show="click==4">
 
-						    		<select ng-model="camporganizer">
+						    		<select class="browser-default" ng-model="camporganizer">
 									      <option value="" disabled selected>Select Organizer</option>
 									      <option value="DELL">DELL</option>
 									      <option value="ACER">ACER</option>
@@ -50,7 +50,7 @@
 
 						    	<div class="input-field inline" ng-show="click==5">
 
-						    		<select ng-model="bloodBank">
+						    		<select class="browser-default" ng-model="bloodBank">
 									      <option value="" disabled selected>Select Blood Bank</option>
 									      <option value="Rotary club ">Rotary club </option>
 									      <option value="GGS Club ">GGS Club </option>
