--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,7 @@
 
 			    <li class="sidenav-item user"><a ui-sref="dashboard.donor" class="waves-effect "><i class="small material-icons u-icon" style="color:white">contacts</i>DONOR</a></li>
 			    <li class="sidenav-item"><a ui-sref="dashboard.hospital" class="waves-effect" href="#!"><i class="small material-icons m-icon" style="color:white">room</i>HOSPITAL</a> </li>
-			    <li class="sidenav-item history"><a ui-sref="dashboard.history" class="waves-effect" href="#!"><i class="small material-icons h-icon " style="color:white">schedule</i>HISTORY</a> </li>
+			    <li class="sidenav-item history"><a ui-sref="dashboard.history" class="waves-effect" href="#!"><i class="small material-icons h-icon " style="color:white" ng-click="get_history_patient()">schedule</i>HISTORY</a> </li>
 			   	<div class="divider hide-on-large-only"></div>
 				<div class="hide-on-large-only">
 			   		<!-- addded by sakshi on 20/7/17 -->
