--- a/donor.html
+++ b/donor.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="input-field col s6">  
-              <select ng-model="user_modal_gender">
+              <select  class="browser-default" ng-model="user_modal_gender">
                 <option value="" disabled selected>Select Gender</option>
                 <option value="male">MALE</option>
                 <option value="female">FEMALE</option>
