--- a/findDonor.html
+++ b/findDonor.html
@@ -17,7 +17,7 @@
 							
 							<div class="col s12 m6">
 								<div class="input-field inline" ng-show="click==1">
-								      <select ng-model="donor_bloodgrp">
+								      <select class="browser-default" ng-model="donor_bloodgrp">
 									      <option value="" disabled selected>Select Blood Group</option>
 									      <option value="A+"> A+</option>
 									      <option value="B+">B+</option>
@@ -33,7 +33,7 @@
 
 						    	<div class="input-field inline" ng-show="click==2">
 
-						    		<select ng-model="donor_location">
+						    		<select class="browser-default" ng-model="donor_location">
 									      <option value="" disabled selected>Select Location</option>
 									      <option value="DELHI">DELHI</option>
 									      <option value="GURUGRAM">GURUGRAM</option>
