--- a/userprofile.html
+++ b/userprofile.html
@@ -23,7 +23,7 @@
             </div>
 
            	<div class="input-field col s6">	
-           		<select ng-model="user_modal_gender">
+           		<select class="browser-default" ng-model="user_modal_gender">
            			<option value="" disabled selected>Select Gender</option>
            			<option value="male">MALE</option>
            			<option value="female">FEMALE</option>
@@ -104,7 +104,7 @@
 
 							<div class="row">
 							    <div class="input-field col s6 m6">
-							    <select ng-model="user_blood_grp" ng-value="show_data.user_blood_grp">
+							    <select class="browser-default" ng-model="user_blood_grp" ng-value="show_data.user_blood_grp">
 							    	
 					                <option value="A+">A+</option>
 					                <option value="B+">B+</option>
