Facebook login added

--- a/mainPage.html
+++ b/mainPage.html
@@ -63,7 +63,7 @@
             <div class="col s12 m12">
               <div class="input-field">
               <i class="material-icons prefix tel" style="color: #c62828;left:0px;">opacity</i>
-                <select class="browser-default" ng-model="modal_user_blood_grp">
+                <select class="browser-default" ng-model="modal_user_blood_grp" style="padding-left:60px">
                   <option value="" disabled selected style="color: #c62828">Blood Group</option>
                   <option value="A+">A+</option>
                   <option value="B+">B+</option>
