--- a/userprofile.html
+++ b/userprofile.html
@@ -6,7 +6,7 @@
 
 <div class="user_profile_content">
 	<div id="modal1" class="modal userprofileModal" >
-        <div class="modal-content center">
+        <div class="modal-content center" style="padding-bottom:70px">
           <div class="col s12 m8">
             <h5><span style="color:#c62828">Please Enter Details to access "User Profile"</span></h5>
            
@@ -97,7 +97,7 @@
 							    </div>
 
 							    <div class="input-field col s6 m6">
-							    	<input  type="email" name="user_email" disabled ng-value="show_data.user_email" style="color: #c62828">
+							    	<input  type="email" name="user_email" disabled placeholder="email" ng-value="show_data.user_email" style="color: #c62828">
 							    	
 							    </div>
 							</div>
