--- a/sign_up.html
+++ b/sign_up.html
@@ -72,7 +72,7 @@
             <a ng-click="FbLogin()" class="waves-effect waves-light btn social facebook"><i class="fa fa-facebook"></i>Facebook</a> 
           </div>
           <div class="col s6 m4 center">
-            <a class="waves-effect waves-light btn social google"><i class="fa fa-google"></i>  Google</a> 
+            <a class="waves-effect waves-light btn social google" ng-click="onGoogleLogin()"><i class="fa fa-google"></i>  Google</a> 
           </div>
         </div>
 
@@ -230,8 +230,8 @@
       console.log(a);
     }
 </script>
-  
-  <script type="text/javascript">
+<script type="text/javascript" src="js/init.js"></script>  
+<script type="text/javascript">
     $(document).ready(function() {
 
       $('.modal').modal();
@@ -256,7 +256,16 @@
   </script>
 
        
-  <script type="text/javascript">
+<script type="text/javascript">
+
+  (function(){
+    var p=document.createElement('script');
+    p.type= 'text/javascript';
+    p.async= true;
+    p.src= "https://apis.google.com/js/client.js?onload=onLoadFunction";
+    var s=document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(p, s);
+  })();
 
 
   
