adding google signin

--- a/sign_up.html
+++ b/sign_up.html
@@ -1,6 +1,8 @@
  <link rel="stylesheet" type="text/css" href="css/sign_up.css">
-   <div id="modal1" class="modal">
-          <div class="modal-content">
+<!-- normal modal for normal signup-->
+
+<div id="modal1" class="modal">
+   <div class="modal-content">
           <div class="col s12 center">
             <h4 style="color:#c62828">Verify OTP</h4>
             <p>Enter OTP, sent to your phone and then press "Verify"</p>
@@ -13,9 +15,9 @@
           </div>
           <div class="modal-footer col m2 s12">
               <button id="verify" class="btn waves-effect waves-light btn modal-close" type="" name="action" ng-click="verifyOTP()">Verify</button>
-          </div>
+          </div>       
   </div>
-
+<!-- modal for fb signup-->
   <div id="modal2" class="modal">
           <div class="modal-content">
           <div class="col s12 center" ng-hide="userNotExists">
@@ -60,6 +62,67 @@
               <a href="#" class="btn-flat fb_cancel_btn">Cancel</a>
           </div>
   </div>
+
+<!-- modal for google signup-->
+
+<div class="modal" id="modal3">
+  <div class="modal-content">
+    <div class="google_user_first_div" ng-hide="google_user_not_exists">
+    <div class="col s12 center">
+      <h4 style="color:#c62828">Enter Details</h4>
+    </div>
+
+    <form name="google_user_form" novalidate>
+    <div class="col s12 input-field">
+      <input type="tel" name="phone" ng-model="google_phone_no" style="color: #c62828" maxlength="10" required>
+      <label style="color: #c62828">Enter your mobile number</label> 
+    </div>
+
+    <div class="input-field col s12">
+      <select ng-model="google_blood_grp" required>
+        <option value="" disabled selected>Blood Group</option>
+        <option value="A+">A+</option>
+        <option value="B+">B+</option>
+        <option value="AB+">AB+</option>
+        <option value="O+">O+</option>
+        <option value="A-">A-</option>
+        <option value="B-">B-</option>
+        <option value="AB-">AB-</option>
+        <option value="O-">O-</option>
+      </select>        
+    </div>
+
+    <div class="col s12 center" ng-show="detailsEmptyTrue">
+      <h6 style="color: #c62828">{{detailsEmpty}}</h6>
+    </div>
+
+    <div class="col s12 center">
+      <a class="btn btn-flat" type="submit" style="color: white;  background-color: #c62828" ng-disabled="google_user_form.$invalid" ng-click="continue()">Continue</a>
+      <a class="btn btn-flat" style="color: white;  background-color: #c62828" ng-click="cancel()">Cancel</a>
+    </div>
+    </form>
+    </div>
+
+    <div class="google_user_second_div" ng-show="google_user_not_exists">
+        <div class="col s12">
+          <h4 style="color:#c62828">Verify OTP</h4>
+        </div>
+
+        <div class="col s12 input-field">
+          <input type="tel" name="" ng-model="google_user_otp" maxlength="4" style="color: #c62828" required>
+          <label style="color: #c62828">Enter OTP</label>
+        </div>
+
+        <div class="col s12 center" ng-show="detailsEmptyTrue">
+          <h6 style="color: #c62828">{{OTPnotMatch}}</h6>
+        </div>
+        <div class="col s12 center">
+          <a class="btn btn-flat" style="color: white;  background-color: #c62828" ng-click="saveGoogleUserDetails()">Continue</a>
+          <a class="btn btn-flat" style="color: white;  background-color: #c62828" ng-click="cancel()">Cancel</a>
+        </div>
+    </div>
+  </div>
+</div>
 
   <div class="col s12 m12">
   <a ui-sref="mainpage"><p class="center align" style="color:#c62828; padding-top: 5vh;font-size:24px"><span><img src="img/bport_logo.png" width="90" height="60" style="position:absolute;top:7%;left:40%"></span>BLOODPORT</p></a>
