--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
 
       			<li class="sidenav-item hide-on-large-only" style="color: white"><a class="waves-effect"><i class="small material-icons b-icon " style="color:white">person</i>{{logged_mobile_no}}</a></li>
       			<div class="divider hide-on-large-only"></div>
-      			<li class="sidenav-item bloodsure "><a ui-sref="dashboard.bloodsure" class="waves-effect"><i class="small material-icons b-icon " style="color:white">dashboard</i>BLOODSURE</a></li>
+      			<li class="sidenav-item bloodsure "><a ui-sref="dashboard.bloodsure" ng-click="allHospitals()" class="waves-effect"><i class="small material-icons b-icon " style="color:white">dashboard</i>BLOODSURE</a></li>
 			    <li class="sidenav-item user"><a ui-sref="dashboard.userprofile" class="waves-effect "><i class="small material-icons u-icon" style="color:white">perm_identity</i>USER PROFILE</a></li>
 
 
