--- a/sign_up.html
+++ b/sign_up.html
@@ -202,7 +202,6 @@
                 <option value="" disabled selected>Gender</option>
                 <option value="Male">Male</option>
                 <option value="female">Female</option>
-                <option value="other">Other</option>
               </select>
             </div>
           </div>
@@ -278,7 +277,7 @@
 
             <div class="col offset-s4 s6 offset-m1 m6">
              <!--added by sakshi on 20/7/17-->
-             <button class="btn waves-effect waves-light btn login_btn" type="submit" name="action" ng-click="login()">LOGIN</button>
+             <button class="btn waves-effect waves-light btn login_btn" type="submit" name="action" ng-click="login();allHospitals()">LOGIN</button>
              <!--added finished-->
             </div>
           </div>
