--- a/userprofile.html
+++ b/userprofile.html
@@ -27,7 +27,6 @@
            			<option value="" disabled selected>Select Gender</option>
            			<option value="male">MALE</option>
            			<option value="female">FEMALE</option>
-           			<option value="others">Others</option>
            		</select>
            	</div>
 
@@ -100,7 +99,7 @@
 							<div class="row">
 							    <div class="input-field col s6 m6">
 							    <select class="browser-default" ng-model="user_blood_grp" ng-value="show_data.user_blood_grp">
-							    	
+							    	<option value="" disabled selected>Blood Group</option>
 					                <option value="A+">A+</option>
 					                <option value="B+">B+</option>
 					                <option value="AB+">AB+</option>
